# asm-lsp

./: '  6502.html  Cargo.toml  hello_lsp  run_tests.sh
.github/workflows/: lint_and_test.yml  publish.yml
asm-docs-parse/: Cargo.toml
asm-docs-parse/src/: main.rs
asm-lsp/: Cargo.toml  config_builder.rs  lsp.rs  parser.rs  test.rs  types.rs
asm-lsp/serialized/directives/: avr  fasm  gas  mars  masm  nasm
asm-lsp/serialized/opcodes/: 6502  arm  arm64  avr  riscv  x86  x86_64  z80
asm-lsp/serialized/registers/: 6502  arm  arm64  avr  power-isa  x86  x86_64  z80
asm_docs_parsing/: regenerate.sh
asm_docs_parsing/src/: main.rs
client/vscode/: extension.js  package-lock.json  package.json
directives/: gas_directives.xml
docs_store/opcodes/raw/: avr.csv
docs_store/opcodes/serialized/: arm
docs_store/registers/raw/: 6502.xml
opcodes/: gas_pseudo_directives.xml  z80.xml
registers/: Z80.xml  x86.xml  x86_64.xml
samples/: arm.s  gas.s  hello_lsp.s  test.s  z80.s
src/: handle.rs  lib.rs  lsp.rs  parser.rs  test.rs  types.rs  x86_parser.rs
test/: server_init_1.txt  server_starts.sh
xml_gen/: z80.csv  z80_xml_gen.py
xml_gen/arm/: SysReg_xml_A_profile-2024-06_relnote.html
xml_gen/arm/SysReg_xml_A_profile-2024-06/: AArch32-actlr.xml  AArch32-actlr2.xml  AArch32-adfsr.xml  AArch32-aidr.xml  AArch32-aifsr.xml  AArch32-amair0.xml  AArch32-amair1.xml  AArch32-amcfgr.xml  AArch32-amcgcr.xml  AArch32-amcntenclr0.xml  AArch32-amcntenclr1.xml  AArch32-amcntenset0.xml  AArch32-amcntenset1.xml  AArch32-amcr.xml  (+1650 more)
xtask/src/: regnerate_docs.rs
(+3872 files in other folders)
