[package]
name = "asm-docs-parse"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true
license.workspace = true

[dependencies]
asm-lsp = {path = "../asm-lsp/" }
