[package]
name = "asm-lsp"
version.workspace = true
edition.workspace = true

[lib]
name = "asm_lsp"
path = "./lib.rs"
[[bin]]
name = "asm-lsp"
path = "./bin/main.rs"

[dependencies]
anyhow.workspace = true
# write to stderr instead of stdout
flexi_logger.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
quick-xml.workspace = true
regex.workspace = true
reqwest.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
home.workspace = true
mockito.workspace = true
tree-sitter.workspace = true
tree-sitter-asm.workspace = true
once_cell.workspace = true
lsp-textdocument.workspace = true
dirs.workspace = true
symbolic.workspace = true
symbolic-demangle.workspace = true
